# crewai_meeting_prep

./: .gitignore  README.md  development.env  pyproject.toml  report.md
src/crewai_meeting_prep/: crew.py  main.py
src/crewai_meeting_prep/config/: agents.yaml  tasks.yaml
src/crewai_meeting_prep/tools/: ExaSearchTool.py
